--- a/wp-content/themes/decimaltenths/src/scss/global/_helpers.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_helpers.scss
@@ -2,6 +2,11 @@
 // Helper classes
 // ==============================================
 
+body {
+	color: white;
+	background-color: black;
+}
+
 // Accessibility - show for screenreaders, not visually
 .visuallyhidden,
 .screen-reader-text {
