--- a/wp-content/themes/decimaltenths/src/scss/global/_variables.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_variables.scss
@@ -2,14 +2,14 @@
 // Variables
 // ==============================================
 
-$global-width: 1490px;
+$global-width: 1550px;
 
 // Font family
 $brand-font: "Source Code Pro";
 $heading-font: "Michroma";
 
 // Colors
-$brand-green-dark: darken(#43B143, 10%);
+// $brand-green-dark: darken(#43B143, 10%);
 
 // Font weights
 $extra-light: 200;
