--- a/wp-content/themes/decimaltenths/src/scss/app.scss
+++ b/wp-content/themes/decimaltenths/src/scss/app.scss
@@ -17,10 +17,17 @@
 @import "components/buttons";
 @import "components/forms";
 
-@import "components/hero-car-filters";
-@import "components/search-by-car-form";
-
 // Modules
 
 @import "modules/footer";
 
+// Homepage
+@import "components/hero-car-filters";
+@import "components/search-by-car-form";
+@import "components/brand-logos";
+@import "components/scrolling-products";
+@import "components/category-panels";
+@import "components/brand-logos";
+@import "components/service-highlight";
+@import "components/brand-logos";
+@import "components/video-feed";
