--- a/wp-content/themes/decimaltenths/src/scss/global/_root-vars.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_root-vars.scss
@@ -4,11 +4,11 @@
 // ==============================================
 
 :root {
-	--grid-width: 1340px;
+	--grid-width: 1550px;
 
 	// Brand Colours
 	--brand-neon-green: #50e887;
-	--brand-green: #43B143;
+	// --brand-green: #43B143;
 	--brand-l-grey: #F2F2F2;
 	--brand-d-grey: #282828;
 
@@ -26,7 +26,7 @@
 	--scale: 1.15; // use this to set Heading scale
 
 	@include breakpoint(large) {
-		--scale: 1.317; // use this to set Heading scale
+		--scale: 1.246; // use this to set Heading scale
 	}
 
 	// Don't change the lines below, you only need to change the --scale above.
