--- a/wp-content/themes/decimaltenths/src/scss/components/_brand-logos.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_brand-logos.scss
@@ -3,7 +3,7 @@
 // ==============================================
 
 brand-logos {
-    display: block;
+    @extend %row;
     padding-top: 50px;
     padding-bottom: 50px;
 
