--- a/wp-content/themes/decimaltenths/src/scss/components/_hero-car-filters.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_hero-car-filters.scss
@@ -5,7 +5,7 @@
 hero-car-filters {
     position: relative;
     display: block;
-    background: black url('../img/green-car-bg.jpg') right center; 
+    background: url('../img/green-car-bg.jpg') right center; 
     background-size: cover;
 
     @include breakpoint(medium down) {
