--- a/wp-content/themes/decimaltenths/src/scss/global/_helpers.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_helpers.scss
@@ -5,6 +5,10 @@
 body {
 	color: white;
 	background-color: black;
+	background-image: url('../img/body-bg-1.png'), url('../img/body-bg-4.png');
+	background-position: right 2vh, right bottom;
+	background-repeat: no-repeat, no-repeat;
+	background-size: 100% auto;
 }
 
 // Accessibility - show for screenreaders, not visually
