--- a/wp-content/themes/decimaltenths/src/scss/components/_search-by-car-form.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_search-by-car-form.scss
@@ -9,7 +9,7 @@
     .form-row {
 
         &:last-of-type {
-            padding-top: $medium-spacing;
+            padding-top: 20px;
         }
     }
 
