--- a/wp-content/themes/decimaltenths/src/scss/global/_typography.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_typography.scss
@@ -27,6 +27,7 @@ h6,
 	font-weight: $bold;
 	font-family: $heading-font;
 	line-height: 1.2;
+	letter-spacing: 0.05em;
 	color: inherit;
 	text-transform: uppercase;
 	text-rendering: optimizeLegibility;
