--- a/wp-content/themes/decimaltenths/src/scss/components/_forms.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_forms.scss
@@ -22,8 +22,8 @@ textarea {
 select {
     box-sizing: border-box;
     width: 100%;
-    height: 60px;
-    margin: 0 0 1rem;
+    height: 66px;
+    margin: 0 0 14px;
     padding: $small-spacing;
     padding-right: 1.5rem;
     color: #0a0a0a;
