--- a/wp-content/themes/decimaltenths/src/scss/components/_scrolling-products.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_scrolling-products.scss
@@ -4,7 +4,47 @@
 
 scrolling-products {
     display: block;
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding-top: 35px;
+    padding-bottom: 50px;
     outline: 1px dashed #f0f;
+
+    .h3 {
+        margin-bottom: 24px;
+    }
+
+    product-card {
+        display: block;
+        outline: 1px dashed cyan;
+    }
+
+    .product--img {
+        margin-bottom: 20px;
+    }
+
+    .product--desc {
+        // CSS Grid to control layout
+        display: grid;
+        grid-template-columns: 70% 30%;
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+
+        p {
+            margin-bottom: 10px;
+        }
+    }
+
+    .product--title {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .product--price {
+        grid-area: 1 / 2 / 2 / 3;
+        text-align: right;
+    }
+
+    .product--category {
+        grid-area: 2 / 1 / 3 / 3;
+        color: var(--brand-neon-green);
+    }
 }
