--- a/wp-content/themes/decimaltenths/src/scss/global/_flex-grid.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_flex-grid.scss
@@ -581,10 +581,10 @@
 	// 	margin-left: 58.33333%;
 	// }
 
-	// .large-9 {
-	// 	flex: 0 0 75%;
-	// 	max-width: 75%;
-	// }
+	.large-9 {
+		flex: 0 0 75%;
+		max-width: 75%;
+	}
 
 	// .large-offset-8 {
 	// 	margin-left: 66.66667%;
