--- a/wp-content/themes/decimaltenths/src/scss/components/_hero-car-filters.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_hero-car-filters.scss
@@ -44,6 +44,10 @@ hero-car-filters {
         color: white;
 
         @include breakpoint(large) {
+            max-width: 50%;
+        }
+
+        @include breakpoint(xlarge) {
             max-width: 40%;
         }
     }
