--- a/wp-content/themes/decimaltenths/src/scss/global/_helpers.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_helpers.scss
@@ -36,26 +36,22 @@ body {
 	}
 }
 
-// body {
-// 	background-color: red;
+html {
+	border: 2px solid red;
 
-// 	@include breakpoint(medium) {
-// 		background-color: orange;
-// 	}
+	@include breakpoint(medium) {
+		border: 2px solid orange;
+	}
 
-// 	@include breakpoint(large) {
-// 		background-color: yellow;
-// 	}
+	@include breakpoint(large) {
+		border: 2px solid yellow;
+	}
 
-// 	@include breakpoint(xlarge) {
-// 		background-color: blue;
-// 	}
+	@include breakpoint(xlarge) {
+		border: 2px solid blue;
+	}
 
-// 	@include breakpoint(xxlarge) {
-// 		background-color: green;
-// 	}
-// }
-
-// section, .section {
-// 	outline: 1px dashed #f0f;
-// }
+	@include breakpoint(xxlarge) {
+		border: 2px solid green;
+	}
+}
