--- a/wp-content/themes/decimaltenths/src/scss/global/_flex-grid.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_flex-grid.scss
@@ -732,10 +732,10 @@
 	// 		margin-left: 8.33333%;
 	// 	}
 
-	// .xlarge-3 {
-	// 	flex: 0 0 25%;
-	// 	max-width: 25%;
-	// }
+	.xlarge-3 {
+		flex: 0 0 25%;
+		max-width: 25%;
+	}
 
 	// 	.xlarge-offset-2 {
 	// 		margin-left: 16.66667%;
