--- a/wp-content/themes/decimaltenths/src/scss/components/_scrolling-products.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_scrolling-products.scss
@@ -4,21 +4,19 @@
 
 scrolling-products {
     display: block;
-    padding-top: 35px;
-    padding-bottom: 50px;
-    outline: 1px dashed #f0f;
+    padding-top: rem-calc(35px);
+    padding-bottom: rem-calc(50px);
 
     .h3 {
-        margin-bottom: 24px;
+        margin-bottom: rem-calc(24px);
     }
 
     product-card {
         display: block;
-        outline: 1px dashed cyan;
     }
 
     .product--img {
-        margin-bottom: 20px;
+        margin-bottom: $large-spacing;
     }
 
     .product--desc {
@@ -30,7 +28,7 @@ scrolling-products {
         grid-row-gap: 0px;
 
         p {
-            margin-bottom: 10px;
+            margin-bottom: $small-spacing;
         }
     }
 
