--- a/wp-content/themes/decimaltenths/src/scss/components/_category-panels.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_category-panels.scss
@@ -42,8 +42,12 @@ category-panels {
             }
         }
 
+        // span
         .arrow-right {
             position: relative;
+            display: inline-block;
+            margin-bottom: $large-spacing;
+            border-bottom: 1px solid transparent;
 
             &::after {
                 content: '';
@@ -54,7 +58,9 @@ category-panels {
             }
         }
 
+        // span
         .picture {
+            position: relative;
             margin-bottom: rem-calc(28px);
             height: 30vh;
             border-top-right-radius: rem-calc(90px);
@@ -64,6 +70,37 @@ category-panels {
             @include breakpoint(large) {
                 height: 70vh;
                 max-height: rem-calc(630px);
+            }
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: 0;
+                width: 100%;
+                height: 100%;
+                background-color: var(--brand-neon-green);
+            }
+
+            img {
+                z-index: 1;
+            }
+        }
+
+        a {
+            display: block;
+            
+            &:hover,
+            &:focus {
+
+                img {
+                    mix-blend-mode: multiply;
+                }
+
+                .arrow-right {
+                    border-bottom-color: var(--brand-neon-green);
+                }
             }
         }
     }
