--- a/wp-content/themes/decimaltenths/src/scss/components/_hero-car-filters.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_hero-car-filters.scss
@@ -5,8 +5,6 @@
 hero-car-filters {
     position: relative;
     display: block;
-    background: url('../img/green-car-bg.webp') right center; 
-    background-size: cover;
 
     @include breakpoint(medium down) {
         height: 95vh;
@@ -20,7 +18,8 @@ hero-car-filters {
         width: 100%;
         height: 100%;
         background: rgb(0,0,0); 
-        background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+        background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 40%, rgba(0,0,0,0) 100%);
+        z-index: 2;
 
         @include breakpoint(large) {
             width: 50%;
@@ -29,9 +28,11 @@ hero-car-filters {
 
     hero-inner {
         @extend %row;
-        position: relative;
+        position: absolute;
+        top: 0;
         z-index: 5;
         padding-top: rem-calc(128px);
+        width: 100%;
 
         @include breakpoint(large) {
             padding-left: rem-calc(42px);
@@ -68,4 +69,21 @@ hero-car-filters {
         line-height: rem-calc(34);
         font-style: italic;
     }
+}
+
+// carousel
+
+// TODO: Dan...
+hero-images {
+    display: block;
+    // position: relative;
+    // z-index: 1;
+    // @extend %picture;
+
+    // img {
+    //     @extend %picture-child;
+    // }
+
+    // carousel overrides
+    // margin-bottom: 0 !important;
 }
