Minor updates; mobile padding and margins on the Shop. * updated colours * helper classes * Styles for the pagination

--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
@@ -23,6 +23,12 @@ ul.products,
 // UL
 .featured-products {
 
+	// Image 
+	.attachment-woocommerce_thumbnail, 
+	.size-woocommerce_thumbnail {
+		margin-bottom: rem-calc(20px);
+	}
+
 	// Shop category listings
 	.woocommerce-loop-category__title {
 		@extend %h5;
@@ -148,15 +154,16 @@ ul.products,
 
 		.woocommerce-loop-product__title {
 			@extend %h5;
-			margin-bottom: 0;
+			margin-bottom: 15px;
 			// font-weight: $regular;
 		}
 	}
 }
 
 .price {
+	display: block;
 	font-weight: bold;
-	color: darkgreen;
+	color: var(--brand-neon-green);
 
 	del {
 		opacity: 0.5;
