Styles to override the plugin WOOF Filters

--- a/wp-content/themes/decimaltenths/src/scss/category.scss
+++ b/wp-content/themes/decimaltenths/src/scss/category.scss
@@ -13,6 +13,7 @@
 @import "components/breadcrumbs";
 @import "components/product-filter";
 @import "components/woo-grid";
+@import "vendor/woof-filter";
 
 // Modules
 @import "modules/taxonomy-layout";
