--- a/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
@@ -54,7 +54,8 @@
 }
 
 .shop-sidebar {
-    padding: $small-spacing;
+    padding: rem-calc(50) $medium-spacing;
+    width: 100%; // odd this needs declaring to prevent overflow
 }
 
 // global styles
