Single product mobile styles, including the Tabs (description, reviews)

--- a/wp-content/themes/decimaltenths/src/scss/components/_related-products.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_related-products.scss
@@ -8,6 +8,7 @@
 
     > h2 {
         text-align: center;
+        @extend %h1;
     }
 
     // UL
@@ -16,6 +17,10 @@
         justify-content: center;
         list-style: none;
         padding: 0;
+
+        // .woocommerce-loop-product__title {
+        //     @extend %h3;
+        // }
     }
 }
 
