--- a/wp-content/themes/decimaltenths/src/scss/product.scss
+++ b/wp-content/themes/decimaltenths/src/scss/product.scss
@@ -14,6 +14,7 @@
 @import "components/related-products";
 @import "components/woo-gallery";
 @import "components/woo-grid";
+@import "components/woo-tabs";
 
 // Modules
 @import "modules/single-product-layout";
