Mental PHP to output the custom dropdown menu's. Adjusted styles

--- a/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
@@ -91,6 +91,11 @@
 			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='%2350e887' d='M443.8 330.8C440.6 334.3 436.3 336 432 336c-3.891 0-7.781-1.406-10.86-4.25L224 149.8l-197.1 181.1c-6.5 6-16.64 5.625-22.61-.9062c-6-6.5-5.594-16.59 .8906-22.59l208-192c6.156-5.688 15.56-5.688 21.72 0l208 192C449.3 314.3 449.8 324.3 443.8 330.8z'/%3E%3C/svg%3E");
 			background-size: 15px auto;
 			background-position: 10px center;
+
+			+ .sub-menu {
+				display: block;
+				outline: 2px dashed #f0f;
+			}
 		}
 	}
 
@@ -108,18 +113,6 @@
 		cursor: pointer;
 	}
 
-	// had to make an exception here, to stop the menu going off-screen
-	.menu-item-157806 {
-		// shop by part
-
-		.sub-menu {
-			@include breakpoint(xxlarge) {
-				left: 50%;
-				transform: translateX(-50%);
-			}
-		}
-	}
-
 	// styles for all sub-menu's
 	.sub-menu {
 		padding: $medium-spacing;
@@ -127,7 +120,6 @@
 		border-radius: 5px;
 
 		@include breakpoint(large) {
-			display: none;
 			position: absolute;
 			left: 0;
 			top: 100%;
