Styles for the Gallery on single product

--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-gallery.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-gallery.scss
@@ -5,10 +5,16 @@
 .woocommerce-product-gallery, 
 .woocommerce-product-gallery--with-images, 
 .woocommerce-product-gallery--columns-4 {
+
+    margin-bottom: rem-calc(50);
 }
 
 .woocommerce-product-gallery {
     position: relative;
+
+    @include breakpoint(medium) {
+        padding: 0 $medium-spacing;
+    }
 }
 
 .woocommerce-product-gallery__wrapper {
