Tweak to styles

--- a/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
@@ -94,7 +94,8 @@
 
 			+ .sub-menu {
 				display: block;
-				outline: 2px dashed #f0f;
+				max-height: 100vh;
+				overflow: scroll;
 			}
 		}
 	}
