--- a/wp-content/themes/decimaltenths/src/scss/modules/_header.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_header.scss
@@ -30,6 +30,7 @@
 
 	// groups everything to appear in mobile menu
 	.header--inner {
+		position: relative;
 
 		@include breakpoint(large) {
 			display: flex;
