--- a/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
@@ -74,8 +74,8 @@
 	}
 
 	.menu-item-has-children {
-		position: relative;
-		padding-right: 3px;
+		// position: relative;
+		// padding-right: 3px;
 
 		// toggle arrows up/down
 		.sub-menu-toggle[aria-expanded="false"] {
@@ -93,7 +93,10 @@
 			background-position: 10px center;
 
 			+ .sub-menu {
-				display: block;
+				display: flex;
+				flex-flow: row wrap;
+				justify-content: space-between;
+				width: 100%;
 				max-height: 100vh;
 				overflow: scroll;
 			}
@@ -115,7 +118,7 @@
 	}
 
 	// styles for all sub-menu's
-	.sub-menu {
+	.sub-menu {		
 		padding: $medium-spacing;
 		background-color: white;
 		border-radius: 5px;
@@ -175,6 +178,11 @@
 				max-height: 100vh;
 			}
 		}
+	}
+
+	.sub-sub-menu {
+		margin: 0;
+		padding: 0;
 	}
 
 	// models of that car
