--- a/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-layout.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-layout.scss
@@ -55,7 +55,7 @@
 // CSS Grid
 // ==============================================
 
-.archive .woo-container, .archive .search_results {
+.archive .woo-container, .archive .search_results, .archive .woof_shortcode_output {
 	@include breakpoint(medium) {
 		display: grid;
 		gap: 0;
