--- a/wp-content/themes/decimaltenths/src/scss/search.scss
+++ b/wp-content/themes/decimaltenths/src/scss/search.scss
@@ -12,6 +12,7 @@
 @import "components/alerts";
 @import "components/breadcrumbs";
 @import "components/woo-grid";
+@import "vendor/woof-filter";
 
 // Modules
 @import "modules/taxonomy-layout";
