Product images are now the same height

--- a/wp-content/themes/decimaltenths/src/scss/modules/_home-carousel.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_home-carousel.scss
@@ -59,6 +59,15 @@
 	position: relative;
 	overflow: hidden;
 
+	product-card {
+		img {
+			width:  300px;
+    		height: 300px;
+    		object-fit: cover;
+			min-height:100%;
+		}
+	}
+
 	.slick-track {
 		display: flex;
 	}
