--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
@@ -30,6 +30,13 @@ ul.products,
 		margin-bottom: rem-calc(20px);
 	}
 
+	img {
+		width:  300px;
+		height: 300px;
+		object-fit: cover;
+		min-height:100%;
+	}
+
 	// Shop category listings
 	.woocommerce-loop-category__title {
 		@extend %h5;
