--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-gallery.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-gallery.scss
@@ -30,6 +30,10 @@
 
 .woocommerce-product-gallery__image--placeholder {
     border: 1px solid #f2f2f2;
+
+    img {
+        width: 100%;
+    }
 }
 
 .woocommerce-product-gallery__image:nth-child(n+2) {
