--- a/wp-content/themes/decimaltenths/src/scss/modules/_home-carousel.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_home-carousel.scss
@@ -59,12 +59,45 @@
 	position: relative;
 	overflow: hidden;
 
+	a {
+		display: block;
+		&:hover,
+		&:focus {
+
+			img {
+				mix-blend-mode: multiply;
+			}
+		}
+	}
+
 	product-card {
-		img {
-			width:  300px;
-    		height: 300px;
-    		object-fit: cover;
-			min-height:100%;
+
+		.picture {
+			position: relative;
+			overflow: hidden;
+			height: 30vh;
+
+			&::before {
+				content: '';
+				position: absolute;
+				top: 0;
+				left: 0;
+				z-index: 0;
+				width: 100%;
+				height: 100%;
+				background-color: var(--brand-neon-green);
+			}
+
+			img {
+				z-index: 1;
+				position: absolute;
+				height: 100%;
+				width: 100%;
+				top: 0;
+				left: 0;
+				-o-object-fit: cover;
+				object-fit: cover;
+			}
 		}
 	}
 
