Search updated to include site search in the header

--- a/wp-content/themes/decimaltenths/src/scss/app.scss
+++ b/wp-content/themes/decimaltenths/src/scss/app.scss
@@ -29,6 +29,7 @@
 @import "components/category-panels";
 @import "components/service-highlight";
 @import "components/video-feed";
+@import "components/search-form";
 
 // Custom blocks
 @import "vendor/accessible-slick-theme";
