--- a/wp-content/themes/decimaltenths/src/scss/components/_search-form.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_search-form.scss
@@ -5,12 +5,13 @@
 .searchform {
 	@include breakpoint(large) {
 		position: relative;
-		top: -15px;
-		margin-left: $large-spacing;
+		margin-right: $small-spacing;
 		width: 50px;
 		height: 50px;
 		transition: all 0.35s;
 		overflow: hidden;
+		display: inline-block;
+		float: left;
 
 		&:hover,
 		&:focus,
@@ -65,8 +66,8 @@
 		width: $xxxlarge-spacing;
 		height: $xxxlarge-spacing;
 		border: 0;
-		background: var(--brand-light-blue)
-			url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath d='M500.3 443.7l-119.7-119.7c27.22-40.41 40.65-90.9 33.46-144.7C401.8 87.79 326.8 13.32 235.2 1.723C99.01-15.51-15.51 99.01 1.724 235.2c11.6 91.64 86.08 166.7 177.6 178.9c53.8 7.189 104.3-6.236 144.7-33.46l119.7 119.7c15.62 15.62 40.95 15.62 56.57 0C515.9 484.7 515.9 459.3 500.3 443.7zM79.1 208c0-70.58 57.42-128 128-128s128 57.42 128 128c0 70.58-57.42 128-128 128S79.1 278.6 79.1 208z'/%3E%3C/svg%3E")
+		background: transparent
+			url("data:image/svg+xml,%3Csvg class='svg svg--search' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath d='M507.3 484.7l-141.5-141.5C397 306.8 415.1 259.7 415.1 208c0-114.9-93.13-208-208-208S-.0002 93.13-.0002 208S93.12 416 207.1 416c51.68 0 98.85-18.96 135.2-50.15l141.5 141.5C487.8 510.4 491.9 512 496 512s8.188-1.562 11.31-4.688C513.6 501.1 513.6 490.9 507.3 484.7zM208 384C110.1 384 32 305 32 208S110.1 32 208 32S384 110.1 384 208S305 384 208 384z'/%3E%3C/svg%3E")
 			no-repeat center;
 		background-size: 24px auto;
 		border-top-right-radius: 3px;
@@ -83,7 +84,7 @@
 			// floated so we can achieve the hover animation)
 			float: right;
 			background: transparent
-				url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='%2355a5e2' d='M500.3 443.7l-119.7-119.7c27.22-40.41 40.65-90.9 33.46-144.7C401.8 87.79 326.8 13.32 235.2 1.723C99.01-15.51-15.51 99.01 1.724 235.2c11.6 91.64 86.08 166.7 177.6 178.9c53.8 7.189 104.3-6.236 144.7-33.46l119.7 119.7c15.62 15.62 40.95 15.62 56.57 0C515.9 484.7 515.9 459.3 500.3 443.7zM79.1 208c0-70.58 57.42-128 128-128s128 57.42 128 128c0 70.58-57.42 128-128 128S79.1 278.6 79.1 208z'/%3E%3C/svg%3E")
+				url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 30 30' width='30px' height='30px'%3E%3Cg id='surface26861299'%3E%3Cpath style=' stroke:none;fill-rule:nonzero;fill:rgb(31.764707%25,90.980393%25,52.941179%25);fill-opacity:1;' d='M 13 3 C 7.488281 3 3 7.488281 3 13 C 3 18.511719 7.488281 23 13 23 C 15.398438 23 17.597656 22.148438 19.324219 20.734375 L 25.292969 26.707031 C 25.542969 26.96875 25.917969 27.074219 26.265625 26.980469 C 26.617188 26.890625 26.890625 26.617188 26.980469 26.265625 C 27.074219 25.917969 26.96875 25.542969 26.707031 25.292969 L 20.734375 19.320312 C 22.148438 17.597656 23 15.398438 23 13 C 23 7.488281 18.511719 3 13 3 Z M 13 5 C 17.429688 5 21 8.570312 21 13 C 21 17.429688 17.429688 21 13 21 C 8.570312 21 5 17.429688 5 13 C 5 8.570312 8.570312 5 13 5 Z M 13 5 '/%3E%3C/g%3E%3C/svg%3E")
 				no-repeat center;
 			background-size: 24px auto;
 		}
