--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
@@ -143,22 +143,63 @@ ul.products,
 			}
 		}
 
-		// IMG
-		.picture {
-			margin: 0 auto $large-spacing;
-			// aspect ratio
-			height: 0;
-			padding-top: calc(762 / 503 * 100%);
-			background-color: green;
-
-			img {
-
-				&:hover,
-				&:focus {
+		a {
+			display: block;
+			&:hover,
+			&:focus {
+	
+				img {
 					mix-blend-mode: multiply;
 				}
 			}
 		}
+
+		// IMG
+		.picture {
+			position: relative;
+			overflow: hidden;
+			height: 30vh;
+
+			&::before {
+				content: '';
+				position: absolute;
+				top: 0;
+				left: 0;
+				z-index: 0;
+				width: 100%;
+				height: 100%;
+				background-color: var(--brand-neon-green);
+			}
+
+			img {
+				z-index: 1;
+				position: absolute;
+				height: 100%;
+				width: 100%;
+				top: 0;
+				left: 0;
+				-o-object-fit: cover;
+				object-fit: cover;
+			}
+		}
+
+
+
+		// .picture {
+		// 	margin: 0 auto $large-spacing;
+		// 	// aspect ratio
+		// 	height: 0;
+		// 	padding-top: calc(762 / 503 * 100%);
+		// 	background-color: green;
+
+		// 	img {
+
+		// 		&:hover,
+		// 		&:focus {
+		// 			mix-blend-mode: multiply;
+		// 		}
+		// 	}
+		// }
 
 		.woocommerce-loop-product__title {
 			@extend %h5;
