Search filter styling

--- a/wp-content/themes/decimaltenths/src/scss/search.scss
+++ b/wp-content/themes/decimaltenths/src/scss/search.scss
@@ -11,6 +11,7 @@
 // Components
 @import "components/alerts";
 @import "components/breadcrumbs";
+@import "components/search";
 @import "components/woo-grid";
 @import "vendor/woof-filter";
 
