--- a/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-layout.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-layout.scss
@@ -91,6 +91,10 @@
 	}
 }
 
+.no-results {
+	grid-area: tax-content;
+}
+
 .woocommerce-breadcrumb {
 	@include breakpoint(medium) {
 		grid-area: tax-bread;
